--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -1,107 +1,154 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
-<head>
-  <meta charset="utf-8">
+  <head>
+    <meta charset="utf-8" />
 
-  <title>Great Idea!</title>
+    <title>Great Idea!</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
-  <link rel="stylesheet" href="css/index.css">
+    <link
+      href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/index.css" />
 
-  <!--[if lt IE 9]>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
-  <![endif]-->
-</head>
+    <!--[if lt IE 9]>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+    <![endif]-->
+  </head>
 
-<body>
+  <body>
+    <div class="container">
+      <header>
+        <div class="header navigation">
+          <div class="nav-items">
+            <a href="./services.html">Services</a>
+            <a href="#">Product</a>
+            <a href="#">Vision</a>
+            <a href="#">Features</a>
+            <a href="#">About</a>
+            <a href="#">Contact</a>
+          </div>
+          <div class="logo-item">
+            <img
+              class="logo"
+              src="img/logo.png"
+              alt="Great Idea! Company logo."
+            />
+          </div>
+        </div>
+      </header>
 
+      <main>
+        <div class="mid-section">
+          <div class="services-row1">
+            <div class="services-col-1">
+              <img
+                class="services-header-img"
+                src="img/services-header.jpg"
+                alt="Our services header image"
+              />
+            </div>
 
-Services
-Product
-Vision
-Features
-About
-Contact
+            <h1>Services</h1>
 
-<img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+            <p>
+              Our services provide the best digital value in nulla suscipit
+              interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc
+              sit amet, iaculis tortor. Mauris consectetur feugiat justo quis
+              aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem
+              neque, sed faucibus nibh pellentesque eleifend. Mauris euismod
+              facilisis iaculis.
+            </p>
+          </div>
 
+          <h1>Digital Design</h1>
 
-<img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
+          <p>
+            Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+            accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+            justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+            finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+            euismod facilisis iaculis.
+          </p>
 
-Services
+          <button>Learn More</button>
 
-Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.
+          <h1>UX / UI</h1>
 
+          <p>
+            Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+            accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+            justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+            finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+            euismod facilisis iaculis.
+          </p>
 
-Digital Design
+          <button>Learn More</button>
 
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
+          <h1>Digital Marketing</h1>
+          <p>
+            Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+            accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+            justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+            finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+            euismod facilisis iaculis.
+          </p>
+          <button>Learn More</button>
 
-Learn More
+          <h1>Web Development</h1>
+          <p>
+            Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+            accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+            justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+            finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+            euismod facilisis iaculis.
+          </p>
+          <button>Learn More</button>
 
+          <h1>iOS Development</h1>
+          <p>
+            Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+            accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+            justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+            finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+            euismod facilisis iaculis.
+          </p>
+          <button>Learn More</button>
 
+          <h1>Android Development</h1>
+          <p>
+            Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum,
+            accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat
+            justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce
+            finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris
+            euismod facilisis iaculis.
+          </p>
+          <button>Learn More</button>
 
-UX / UI
+          Some Facts About Our Services Nulla suscipit interdum diam at maximus.
+          Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+          Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et
+          justo eu consequat. Fusce finibus sem neque, sed faucibus nibh
+          pellentesque eleifend. Mauris euismod facilisis iaculis.
 
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
+          <ul>
+            <li>Awesome thing</li>
+            <li>Amazing thing</li>
+            <li>Cool thing</li>
+            <li>Great thing</li>
+          </ul>
 
-Learn More
-
-
-
-Digital Marketing
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-
-Web Development
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-
-iOS Development
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-
-Android Development
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-Some Facts About Our Services
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-
-Awesome thing
-Amazing thing
-Cool thing
-Great thing
-
-<img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
-
-Copyright Great Idea! 2018
-
-</body>
-
+          <img
+            class="services-info-img"
+            src="img/services-info.png"
+            alt="one of our employees hard at work"
+          />
+        </div>
+      </main>
+      <footer>
+        <p>Copyright Great Idea! 2018</p>
+      </footer>
+    </div>
+  </body>
 </html>
